--- a/mediarepo-ui/src/styles.scss
+++ b/mediarepo-ui/src/styles.scss
@@ -18,6 +18,25 @@ $theme: mat.define-dark-theme((
   )
 ));
 
+$color-config: mat.get-color-config($theme);
+$primary-palette: map.get($color-config, 'primary');
+$warn-palette: map.get($color-config, 'warn');
+
+::-webkit-scrollbar {
+    width: 15px;
+    height: 15px;
+    background: #272727;
+}
+
+::-webkit-scrollbar-thumb {
+    background: mat.get-color-from-palette($primary-palette, 'darker');
+    border-radius: 1px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: mat.get-color-from-palette($primary-palette);
+}
+
 @include mat.all-component-themes($theme);
 @include app.theme($theme);
 @include file-card.theme($theme);
